--- a/frontend/src/scss/components/landing.css
+++ b/frontend/src/scss/components/landing.css
@@ -89,6 +89,10 @@
   font-weight: 500;
 }
 
+.landingButtonsTop {
+  display: flex;
+}
+
 .jobcent-logo {
   max-width: 75vw;
 }
@@ -98,7 +102,7 @@
   -webkit-flex-direction: row;
   align-items: center;
   background-color: #28c101;
-  border: 1px solid #e2e2e2;
+  border: 1px solid #00000063 !important;
   border-radius: 100px;
   color: #fff;
   display: inline-flex;
@@ -227,6 +231,41 @@
   height: 5vh;
 }
 
+.loginButtonTop {
+  background-color: blue;
+  color: white;
+  border-radius: 45px;
+  border: 1px solid #00000063;
+  width: 40vw;
+  max-width: 170px;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 500;
+  height: 40px;
+  margin-right: -5px;
+  margin-left: 15px;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.loginButtonBottom {
+  background-color: blue;
+  color: white;
+  border-radius: 45px;
+  border: 1px solid #00000063;
+  width: 40vw;
+  max-width: 200px;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 500;
+  height: 40px;
+  margin-right: 14px;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 .moreInfo {
   display: flex;
   flex-direction: column;
@@ -266,6 +305,10 @@
   text-decoration: none;
 }
 
+.timelineBtn {
+  display: flex;
+}
+
 .vertical-timeline-element-title {
   font-size: 24px;
 }
@@ -276,7 +319,7 @@
 
 .nav-arrow {
   -webkit-transform: translateX(-50%);
-  bottom: 2rem;
+  bottom: 3rem;
   height: 50px;
   left: 50%;
   opacity: 1;
@@ -372,10 +415,15 @@
   background-color: #fff;
   border: 1px solid #e2e2e2;
   color: #000;
-  margin-right: 15px;
+  margin-right: 0px;
   transition: background 0.35s ease-out;
 }
 
+@media (min-width: 768px) and (min-height: 600px) {
+  .nav-arrow {
+    bottom: 7.5rem !important;
+  } 
+}
 
 @media (max-width: 350px) {
   .timelineBtn {
@@ -736,7 +784,7 @@
 
 @media (min-width: 701px) and (min-height: 401px) and (max-width: 775px) and (max-height: 440px) {
   .nav-arrow {
-    bottom: 1rem;
+    bottom: 3rem;
   }
 
   .scrolling {
@@ -816,7 +864,7 @@
 /* probably always good for width, especially footer */
 @media (min-width: 480px) and (min-height: 300px) and (max-width: 950px) and (max-height: 950px) {
   .nav-arrow {
-    bottom: 1rem;
+    bottom: 3rem;
   }
 
   .jobcent-logo {
@@ -953,7 +1001,7 @@
 
 @media (max-width: 300px) {
   .nav-arrow {
-    bottom: 2rem;
+    bottom: 4rem;
   }
 
   .scrolling {
@@ -979,13 +1027,13 @@
 
 @media (min-height: 350px) {
   .nav-arrow {
-    bottom: 1.5rem !important;
+    bottom: 3.5rem;
   }
 }
 
 @media (max-height: 400px) {
   .nav-arrow {
-    bottom: 1.5rem !important;
+    bottom: 3.5rem !important;
   }
 
   .jobcent-logo {
@@ -995,7 +1043,7 @@
 
 @media (min-width: 950px) {
   .nav-arrow {
-    bottom: 1.5rem !important;
+    bottom: 5.5rem;
   }
 
   .footer {
@@ -1055,6 +1103,18 @@
     right: 0px !important;
   }
 }
+
+@media (width: 768px) and (height: 1024px) {
+  .nav-arrow {
+    bottom: 9.5rem !important;
+  }
+
+  .contactButtons {
+    max-width: 22vw !important;
+  }
+}
+
+
 
 /* @media (min-width: 480px) and (max-width: 484px) {
   .scrolling {
