--- a/frontend/src/scss/components/transfer.css
+++ b/frontend/src/scss/components/transfer.css
@@ -74,6 +74,10 @@
     padding: 5px;
 }
 
+.amountToTransfer {
+    padding-left: 7px;
+}
+
 .enter-email {
     -ms-flex-align: start;
     -webkit-align-items: flex-start;
@@ -86,7 +90,7 @@
     height: auto;
     margin-bottom: 3px;
     min-height: 55px;
-    padding: 0 20px;
+    padding: 0 5px 0px 10px;
     position: relative;
     z-index: 10;
 }
@@ -169,17 +173,25 @@ label {
 .recipients {
     display: flex;
     flex-direction: row;
-    padding-left: 15px;
+    padding-left: 10px;
     padding-right: 20px;
     padding-top: 11px;
     width: 100%;
+}
+
+.redeemHeader {
+    color: #204fc7;
+    font-size: 40px;
+    letter-spacing: 0;
+    text-align: center;
+    margin-top: 20px;
 }
 
 .transfer-input-field {
     border: none;
     border-radius: 0;
     display: inline-block;
-    font-size: 18px;
+    font-size: 16px;
     height: 34px;
     line-height: 1;
     margin-bottom: 10px;
@@ -187,6 +199,7 @@ label {
     outline: 0;
     padding-left: 0;
     padding-right: 0;
+    padding-bottom: 4px;
     width: 100%;
 }
 
